--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,6 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Grant execute permission for gradlew
-      run: cd server & chmod +x gradlew
+      run: chmod +x server/gradlew
     - name: Build with Gradle
       run: cd server & ./gradlew build
