--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,5 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x server/gradlew
     - name: Build with Gradle
-      run: cd server & ./gradlew build
+      working-directory: ./server
+      run: ./gradlew build
