--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,8 +4,8 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ main, test-gradle-build ]
+  #push:
+    #branches: [ main, test-gradle-build ]
   pull_request:
     branches: [ main ]
 
@@ -25,5 +25,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x server/gradlew
     - name: Build with Gradle
-      working-directory: ./server
-      run: ./gradlew build
+      run: |
+        cd server
+        ./gradlew build
+        
