--- a/.github/workflows/deploy-svelte.yml
+++ b/.github/workflows/deploy-svelte.yml
@@ -1,4 +1,4 @@
-name: Deply svelte web
+name: Deploy svelte web
 
 on:
   push:
@@ -26,8 +26,8 @@ jobs:
         npm ci
         npm run build --if-present
     - uses: akhileshns/heroku-deploy@v3.12.12 # Deploy to heroku action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_API_EMAIL}}
-          appdir: web/public
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+        heroku_email: ${{secrets.HEROKU_API_EMAIL}}
+        appdir: web/public
