:rocket: fixed appdir

--- a/.github/workflows/deploy-svelte.yml
+++ b/.github/workflows/deploy-svelte.yml
@@ -30,4 +30,4 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
         heroku_email: ${{secrets.HEROKU_API_EMAIL}}
-        appdir: web/public
+        appdir: web
