Remove placeholder database properties

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/mydb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=datasource_url
+spring.datasource.username=username
+spring.datasource.password=password
