--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-carousel": "^1.0.16"
   }
 }
