refactor: Add properties to application.properties

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=datasource_url
-spring.datasource.username=username
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=postgres
 spring.datasource.password=password
