--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build with Gradle
       run: |
         cd server
-        ./gradlew build
+        ./gradlew build --stacktrace 
         
