--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinephiliadb
+spring.datasource.username=cinephiler-dev
+spring.datasource.password=cinephilia-pass-dev
