--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/cinephiliadb
-spring.datasource.username=cinephiler-dev
-spring.datasource.password=cinephilia-pass-dev
+spring.datasource.url=${SQL_URL}
+spring.datasource.username=${SQL_USERNAME}
+spring.datasource.password=${SQL_PASSWORD}
+
+spring.data.mongodb.uri=${NOSQL_URI}
+spring.data.mongodb.database=${NOSQL_DATABASE}
