--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,12 @@ jobs:
         #app_db: # optional, default is app
         # EXPOSED_POSTGRES_PORT - exposed postgres port
         #exposed_postgres_port: # optional, default is 5432
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.6.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+        mongodb-root-username: admin
+        mongodb-root-password: admin
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
