:green_heart: Updating properties
:cat:

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,14 +10,14 @@ on:
     branches: [ main ]
 
 jobs:
-  logging:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Testing environment Variables
-      run: |
-        echo "SQL_URL: ${{ secrets.SQL_URL }}"
-        echo "SQL_USERNAME: ${{ secrets.SQL_USERNAME }}" 
-        echo "SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}" 
+  #logging:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #  - name: Testing environment Variables
+  #    run: |
+  #      echo "SQL_URL: ${{ secrets.SQL_URL }}"
+  #      echo "SQL_USERNAME: ${{ secrets.SQL_USERNAME }}" 
+  #      echo "SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}" 
   build:
 
     runs-on: ubuntu-latest
@@ -59,8 +59,8 @@ jobs:
         cache: gradle
     - name: Grant execute permission for gradlew
       run: chmod +x server/gradlew
-    #- name: Build with Gradle
-    #  run: |
-    #    cd server
-    #    ./gradlew build --stacktrace 
+    - name: Build with Gradle
+      run: |
+        cd server
+        ./gradlew build --stacktrace 
         
