--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${SQL_URL}
-spring.datasource.username=${SQL_USERNAME}
-spring.datasource.password=${SQL_PASSWORD}
+spring.datasource.url=${secrets.SQL_URL}
+spring.datasource.username=${secrets.SQL_USERNAME}
+spring.datasource.password=${secrets.SQL_PASSWORD}
 
-spring.data.mongodb.uri=${NOSQL_URI}
-spring.data.mongodb.database=${NOSQL_DATABASE}
+spring.data.mongodb.uri=${secrets.NOSQL_URI}
+spring.data.mongodb.database=${secrets.NOSQL_DATABASE}
