--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = create
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/cinephiliadb
-spring.datasource.username=cinephiler-dev
-spring.datasource.password=cinephilia-pass-dev
+spring.datasource.url=${secrets.SQL_URL}
+spring.datasource.username=${secrets.SQL_USERNAME}
+spring.datasource.password=${secrets.SQL_PASSWORD}
