--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        mongodb-version: ['4.2']
     steps:
     - uses: actions/checkout@v2
     - name: Setup PostgreSQL with PostgreSQL extensions and unprivileged user
@@ -45,12 +47,13 @@ jobs:
         #app_db: # optional, default is app
         # EXPOSED_POSTGRES_PORT - exposed postgres port
         #exposed_postgres_port: # optional, default is 5432
-    - name: Start MongoDB server instance
-      uses: timgchile/mongodb-github-action@1.7.4
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.7.0
       with:
-        mongodb-version: 4.4
-        mongodb-root-username: admin
-        mongodb-root-password: admin
+        mongodb-version: ${{ matrix.mongodb-version }}
+        mongodb-username: admin
+        mongodb-password: admin
+        mongodb-db: mydb
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
@@ -65,6 +68,7 @@ jobs:
         SQL_USERNAME: ${{ secrets.SQL_USERNAME }}
         SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
         NOSQL_URI: ${{ secrets.NOSQL_URI }}
+        NOSQL_DATABASE: ${{ secrets.NOSQL_DATABASE }}
       run: |
         cd server
         ./gradlew build --stacktrace 
