--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,9 +51,9 @@ jobs:
       uses: supercharge/mongodb-github-action@1.7.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
-        mongodb-username: admin
-        mongodb-password: admin
-        mongodb-db: mydb
+        mongodb-username: monguser
+        mongodb-password: mongpass
+        mongodb-db: mongdb
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
