:construction: Working in the production configs.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.2'
 
 services:
 
@@ -11,3 +11,11 @@ services:
       POSTGRES_PASSWORD: cinephilia-pass-dev
       POSTGRES_USER: cinephiler-dev
       POSTGRES_DB: cinephiliadb
+  mongodb:
+    image : mongo
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: monguser
+      MONGO_INITDB_ROOT_PASSWORD: mongpass
+      MONGO_INITDB_DATABASE: mongdb
