--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${SQL_URL}
-spring.datasource.username=${SQL_USERNAME}
-spring.datasource.password=${SQL_PASSWORD}
-
-spring.data.mongodb.uri=${NOSQL_URI}
-spring.data.mongodb.database=${NOSQL_DATABASE}
+spring.profiles.active=dev
