--- a/.github/workflows/deploy-springboot-api.yml
+++ b/.github/workflows/deploy-springboot-api.yml
@@ -9,7 +9,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2d
+    - uses: actions/checkout@v2
     - uses: akhileshns/heroku-deploy@v3.12.12 # Deploy to heroku action
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
