--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.skewdev'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+//sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
