--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:8080}
+server.port=8080
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
